force-app/main/default/objects/Telemetry__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Telemetrys</relationshipLabel>
    <relationshipName>Telemetrys</relationshipName>
    <type>Lookup</type>
</CustomField>