force-app/main/default/objects/Telemetry__c/fields/Cost_Savings__c.field-meta.xml
<CustomField>
    <fullName>Cost_Savings__c</fullName>
    <formula>IF(
    Predicted_Failure_c__c  = TRUE &amp;&amp;
    Is_Failure__c = FALSE,
    5000 - 1500,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>