force-app/main/default/objects/Telemetry__c/fields/Failure_Probability__c.field-meta.xml
<CustomField>
    <fullName>Failure_Probability__c</fullName>
    <label>Failure Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>