force-app/main/default/objects/Telemetry__c/fields/Failure_Type__c.field-meta.xml
<CustomField>
    <fullName>Failure_Type__c</fullName>
    <label>Failure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Predicted</fullName>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>