force-app/main/default/objects/Telemetry__c/fields/Hours_Since_Service__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_Service__c</fullName>
    <label>Hours Since Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>