force-app/main/default/objects/Telemetry__c/fields/Incident_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Incident_Ticket__c</fullName>
    <formula>HYPERLINK(SN_Incident_URL__c , SN_Incident_Number__c , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Ticket</label>
    <type>Text</type>
</CustomField>