force-app/main/default/objects/Telemetry__c/fields/Is_Failure__c.field-meta.xml
<CustomField>
    <fullName>Is_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Failure</label>
    <type>Checkbox</type>
</CustomField>