force-app/main/default/objects/Telemetry__c/fields/Machine_Age_Months__c.field-meta.xml
<CustomField>
    <fullName>Machine_Age_Months__c</fullName>
    <label>Machine Age Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>