force-app/main/default/objects/Telemetry__c/fields/Predicted_Failure_c__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Failure_c__c</fullName>
    <formula>Failure_Probability__c &gt;= 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Predicted_Failure__c</label>
    <type>Checkbox</type>
</CustomField>