force-app/main/default/objects/Telemetry__c/fields/Prediction_Processed__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prediction Processed</label>
    <type>Checkbox</type>
</CustomField>