force-app/main/default/objects/Telemetry__c/fields/SN_Incident_Number__c.field-meta.xml
<CustomField>
    <fullName>SN_Incident_Number__c</fullName>
    <label>SN Incident Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>