force-app/main/default/objects/Telemetry__c/fields/SN_Incident_Status__c.field-meta.xml
<CustomField>
    <fullName>SN_Incident_Status__c</fullName>
    <label>SN Incident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Created</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>