force-app/main/default/objects/Telemetry__c/fields/SN_Incident_Sys_Id__c.field-meta.xml
<CustomField>
    <fullName>SN_Incident_Sys_Id__c</fullName>
    <label>SN Incident Sys Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>