force-app/main/default/objects/Telemetry__c/fields/SN_Incident_URL__c.field-meta.xml
<CustomField>
    <fullName>SN_Incident_URL__c</fullName>
    <label>SN Incident URL</label>
    <type>Url</type>
</CustomField>