force-app/main/default/objects/Telemetry__c/fields/Vibration__c.field-meta.xml
<CustomField>
    <fullName>Vibration__c</fullName>
    <label>Vibration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>