force-app/main/default/objects/Telemetry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset__c</columns>
    <columns>Failure_Probability__c</columns>
    <columns>Is_Failure__c</columns>
    <columns>Vibration__c</columns>
    <columns>Temperature__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>